fdo#49438: heuristic pseudo-hack to use hair-lines if width <= 0.5 pixel

Change-Id: I089d0eea5a0d597705405072de285251a91dfbcc
Signed-off-by: Miklos Vajna <vmiklos@suse.cz>